[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arm-outages-bot"
dynamic = ["version"]
dependencies = [
    "aiofiles",
    "aiohttp >= 3.13, < 3.14",
    "lxml",
    "python-dotenv",
    "python-telegram-bot",
    "python-telegram-bot[job-queue]"
]

[tool.setuptools.packages]
find = { }
